fixed h1 spacing/alignment

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -22,7 +22,10 @@ h1 {
     font: 20vw $fancy-font;
     color: $h1-color;
     text-shadow: 2px 3px 0 $background, 2px 4px 0 $background,  2px 5px 0 $background;
-    margin: 0;
+    margin: 0 auto;
+    width: 100vw;
+    text-align: center;
+    line-height: 0.9em;
 }
 
 h2 {
